retry-hedging/envoy.yaml
---
admin:
  access_log_path: "./admin.log"
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9001
static_resources:
  listeners:
  - name: all-connections
    address:
      socket_address:
        address: 127.0.0.1
        port_value: 9091
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          access_log:
          - name: envoy.file_access_log
            config:
              path: "./access.log"
              json_format:
                start_time: "%START_TIME%"
                request_id: "%REQ(REQUEST-ID)%"
                caller: "%REQ(CALLER)%"
                request_method: "%REQ(:METHOD)%"
                request_path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                content_type: "%REQ(CONTENT-TYPE)%"
                protocol: "%PROTOCOL%"
                response_code: "%RESPONSE_CODE%"
                response_flags: "%RESPONSE_FLAGS%"
                bytes_sent: "%BYTES_SENT%"
                bytes_received: "%BYTES_RECEIVED%"
                request_duration: "%DURATION%"
                response_duration: "%RESPONSE_DURATION%"
                upstream_response_time: "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%"
                client_address: "%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%"
                x_forwarded_for: "%REQ(X-FORWARDED-FOR)%"
                user_agent: "%REQ(USER-AGENT)%"
                http2_authority: "%REQ(:AUTHORITY)%"
                upstream_cluster: "%UPSTREAM_CLUSTER%"
                upstream_host: "%UPSTREAM_HOST%"
          stat_prefix: http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: catchall
              include_request_attempt_count: true
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  hedge_policy:
                    hedge_on_per_try_timeout: true
                  cluster: test
                  timeout:
                    seconds: 15
                  retry_policy:
                    retry_host_predicate:
                    - name: envoy.retry_host_predicates.previous_hosts
                    retry_on: 5xx
                    num_retries: 5
                    per_try_timeout:
                      seconds: 3
          http_filters:
          - name: envoy.router
  clusters:
  - name: test
    connect_timeout: 1s
    type: static
    load_assignment:
      cluster_name: delayed-http
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: "127.0.0.1"
                port_value: 9095
